--- a/MVCWebProject/pom.xml
+++ b/MVCWebProject/pom.xml
@@ -21,6 +21,7 @@
 		<groupId>javax.servlet</groupId>
 		<artifactId>javax.servlet-api</artifactId>
 		<version>3.1.0</version>
+		<scope>provided</scope>
 	</dependency>
 
 	<!-- https://mvnrepository.com/artifact/javax.servlet.jsp.jstl/javax.servlet.jsp.jstl-api -->
@@ -28,20 +29,6 @@
 		<groupId>javax.servlet.jsp.jstl</groupId>
 		<artifactId>javax.servlet.jsp.jstl-api</artifactId>
 		<version>1.2.1</version>
-	</dependency>
-
-	<!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-api -->
-	<dependency>
-		<groupId>org.apache.logging.log4j</groupId>
-		<artifactId>log4j-api</artifactId>
-		<version>2.7</version>
-	</dependency>
-
-	<!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core -->
-	<dependency>
-		<groupId>org.apache.logging.log4j</groupId>
-		<artifactId>log4j-core</artifactId>
-		<version>2.7</version>
 	</dependency>
 
   </dependencies>
