--- a/MVCWebProject/pom.xml
+++ b/MVCWebProject/pom.xml
@@ -24,11 +24,11 @@
 		<scope>provided</scope>
 	</dependency>
 
-	<!-- https://mvnrepository.com/artifact/javax.servlet.jsp.jstl/javax.servlet.jsp.jstl-api -->
+	<!-- https://mvnrepository.com/artifact/javax.servlet/jstl -->
 	<dependency>
-		<groupId>javax.servlet.jsp.jstl</groupId>
-		<artifactId>javax.servlet.jsp.jstl-api</artifactId>
-		<version>1.2.1</version>
+		<groupId>javax.servlet</groupId>
+		<artifactId>jstl</artifactId>
+		<version>1.2</version>
 	</dependency>
 
   </dependencies>
